<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="navigation_drawer_items">
        <item>New Game</item>
        <item>Edit Board</item>
        <item>Flip Board</item>
        <item>Settings</item>
        <item>Analyze</item>
        <item>Generate Positions</item>
    </string-array>

    <string name="app_name">ChessMaster</string>
    <string name="app_name_pop">ChessMaster Beta  1.0</string>
    <string name="erd_title">Rate this app</string>
    <string name="erd_message">Hi, take a minute to rate this app and help me to improve and add new features. ;)</string>
    <string name="erd_no_thanks">Never</string>
    <string name="erd_remind_me_later">Remind later</string>
    <string name="erd_rate_now">Rate now</string>
    <string-array name="moves_per_session_texts">
        <item>Whole Game</item>
        <item>1 move</item>
        <item>10 moves</item>
        <item>20 moves</item>
        <item>30 moves</item>
        <item>40 moves</item>
        <item>50 moves</item>
        <item>60 moves</item>
    </string-array>

    <string-array name="difficulty_depth_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>12</item>
        <item>-1</item>
    </string-array>

    <string-array name="moves_per_session_values">
        <item>0</item>
        <item>1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>

    <string-array name="difficulty_depth_texts">
        <item>2 ply</item>
        <item>3 ply</item>
        <item>4 ply</item>
        <item>5 ply</item>
        <item>6 ply</item>
        <item>7 ply</item>
        <item>8 ply</item>
        <item>12 ply</item>
        <item>Infinite</item>
    </string-array>

    <string-array name="time_control_texts">
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
        <item>90 minutes</item>
        <item>120 minutes</item>
    </string-array>

    <string-array name="time_control_values">
        <item>15000</item>
        <item>30000</item>
        <item>60000</item>
        <item>120000</item>
        <item>180000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>2700000</item>
        <item>3600000</item>
        <item>5400000</item>
        <item>7200000</item>
    </string-array>

    <string-array name="time_increment_texts">
        <item>0s</item>
        <item>1s</item>
        <item>2s</item>
        <item>3s</item>
        <item>4s</item>
        <item>5s</item>
        <item>10s</item>
        <item>12s</item>
        <item>15s</item>
        <item>30s</item>
        <item>60s</item>
    </string-array>

    <string-array name="time_increment_values">
        <item>0</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>10000</item>
        <item>12000</item>
        <item>15000</item>
        <item>30000</item>
        <item>60000</item>
    </string-array>

    <string-array name="font_size_texts">
        <item>Small</item>
        <item>Default</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="font_size_values">
        <item>16</item>
        <item>20</item>
        <item>24</item>
        <item>32</item>
    </string-array>

    <string-array name="game_mode_texts">
        <item>Play White</item>
        <item>Play Black</item>
        <!--<item>Bluetooth (play white)</item>
    	<item>Bluetooth (play black)</item>-->
        <item>Two Players</item>
        <item>Analysis</item>
        <item>Computer vs Computer</item>
    </string-array>

    <string-array name="game_mode_values">
        <item>1</item>
        <item>2</item>
        <!--<item>3</item>
    	<item>4</item>-->
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="thinking_arrows_texts">
        <item>No arrows</item>
        <item>1 arrow</item>
        <item>2 arrows</item>
        <item>3 arrows</item>
        <item>4 arrows</item>
        <item>5 arrows</item>
        <item>6 arrows</item>
    </string-array>

    <string-array name="thinking_arrows_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="scroll_sensitivity_texts">
        <item>Off</item>
        <item>Slowest</item>
        <item>Slow</item>
        <item>Normal</item>
        <item>Fast</item>
        <item>Fastest</item>
    </string-array>

    <string-array name="scroll_sensitivity_values">
        <item>0</item>
        <item>6</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0.5</item>
    </string-array>


    <string name="offer_draw">Offer Draw</string>
    <string name="queen">Queen</string>
    <string name="rook">Rook</string>
    <string name="bishop">Bishop</string>
    <string name="knight">Knight</string>
    <string name="promote_pawn_to">Promote pawn to?</string>
    <string name="copy_game">Copy Game to Clipboard</string>
    <string name="copy_position">Copy Position to Clipboard</string>
    <string name="paste">Paste from Clipboard</string>
    <string name="load_game">Load game from PGN file</string>
    <string name="remove_variation">Remove variation</string>
    <string name="tools_menu">Tools</string>
    <string name="goto_move">Goto move</string>
    <string name="invalid_number_format">Invalid number format</string>
    <string name="side_to_move">Side to Move</string>
    <string name="clear_board">Clear Board</string>
    <string name="initial_position">Initial Position</string>
    <string name="castling_flags">Castling Flags</string>
    <string name="en_passant_file">En Passant File</string>
    <string name="move_counters">Move Counters</string>
    <string name="paste_position">Paste Position</string>
    <string name="edit_board">Edit Board</string>
    <string name="select_side_to_move_first">Select side to move first</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="white_king_castle">White king castle</string>
    <string name="white_queen_castle">White queen castle</string>
    <string name="black_king_castle">Black king castle</string>
    <string name="black_queen_castle">Black queen castle</string>
    <string name="none">None</string>
    <string name="select_en_passant_file">Select En Passant File</string>
    <string name="edit_move_counters">Edit Move Counters</string>
    <string name="internal_book">&lt;Internal Book&gt;</string>
    <string name="select_opening_book_file">Select opening book file</string>
    <string name="select_pgn_file">Select PGN file to open</string>
    <string name="select_pgn_game">Select game to open</string>
    <string name="reading_pgn_file">Reading PGN file</string>
    <string name="please_wait">Please wait...</string>
    <string name="no_pgn_files">No files found in directory ChessMaster/pgn on the SD card folder</string>
    <string name="select_color_theme">Select Color Theme</string>
    <string name="dtitle">Set Color</string>
    <string name="dok">OK</string>
    <string name="dcancel">Cancel</string>
    <string name="title_activity_generation_">Generation_Activity</string>
    <string name="NewGame">New Game</string>
    <string name="EditBoard">Edit Board</string>
    <string name="FlipBoard">Flip Board</string>
    <string name="Analyze">Analyze</string>
    <string name="GeneratePositions">Generate Positions</string>
</resources>
